2013-06-27 Miguel de Dios <miguel.dedios@artica.es>

	* operation/search_agents.php: added the search by ip agent.

2013-06-27 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.constans.php: erased old
	constants.

2013-06-27 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/servers/plugin.php, godmode/setup/file_manager.php,
	include/functions_filemanager.php: added the filemanager to server
	plugin, and of course change the code for to make this feature.

2013-06-18  Ramon Novoa  <rnovoa@artica.es>

	* include/functions.php: Merged from trunk. Fixed a warning.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php,
	include/functions_agents.php: fixed the operations with the ip or
	ips adress of agent.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/menu.php: fixed the default value for refresh in the
	extensions.
	
	Fixes: #2310
	
	* include/functions_extensions.php, extensions/insert_data.php:
	cleaned source code style.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* operation/users/user_edit.php: fixed the "home page" for user,
	now it does show ugly 0 and show correct the dashboard.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* operation/users/user_edit.php: merge the code for made more
	easy the merges from the trunk.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/vnc_view.php: improved the source code style.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* include/constants.php, operation/visual_console/render_view.php:
	fixed the javascript draw lines when there is any error in the map.

2013-06-25  Sancho Lerena <slerena@artica.es>
	
	* extensions/vnc_view.php: Now you can define the display number.

	* operation/agentes/Estado_general_agente.php:: OS version string 
	is fully shown.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* include/constants.php, include/functions_visual_map.php,