@@ -1,3 +1,8 @@
+2013-07-01 Miguel de Dios <miguel.dedios@artica.es>
+
+	* godmode/menu.php, include/functions_menu.php: fixed the entry
+	gis map in ACL enterprise.
+
 2013-06-27 Miguel de Dios <miguel.dedios@artica.es>
 
 	* operation/search_agents.php: added the search by ip agent.
